<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0161EA"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="380dp"
        android:layout_height="89dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="610dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="349dp"
        android:layout_height="59dp"
        android:layout_marginTop="102dp"
        android:text="@string/to_get_started_now"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.024"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="287dp"
        android:layout_height="58dp"
        android:layout_marginBottom="416dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#E3F2FD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.976"
        tools:ignore="MissingConstraints,TextContrastCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/lpassword"
        android:layout_width="287dp"
        android:layout_height="58dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="296dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_"
        android:inputType="textPassword"
        android:textColorHint="#E3F2FD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/cnfpassword"
        android:layout_width="287dp"
        android:layout_height="58dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="#E3F2FD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonR"
        android:layout_width="163dp"
        android:layout_height="53dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cnfpassword"
        app:layout_constraintVertical_bias="0.358" />

</androidx.constraintlayout.widget.ConstraintLayout>