<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0083F7"
    tools:context=".Onboarding">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="176dp"
        android:layout_height="191dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/signup"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:text="@string/signup_"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.613"
        app:rippleColor="#FDFBFB"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Login"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:text="@string/login1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.198" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="265dp"
        android:layout_height="96dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/samachaar"
        android:textColor="#E3F2FD"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>