<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00008B"
    android:outlineProvider="none">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="246dp"
        android:layout_height="195dp"
        android:contentDescription="@string/todo"
        android:outlineProvider="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295"
        app:srcCompat="@drawable/logo3"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="310dp"
        android:layout_height="79dp"
        android:layout_marginBottom="148dp"
        android:fontFamily="@font/aclonica"
        android:outlineProvider="none"
        android:text="@string/samachaar"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.264"
        tools:ignore="TextContrastCheck,TextSizeCheck" />


    <ProgressBar

        style="?android:attr/progressBarStyleHorizontal"

        android:layout_width="220dp"

        android:layout_height="10dp"

        android:layout_gravity="center_horizontal"

        android:layout_marginStart="109dp"

        android:layout_marginTop="47dp"

        android:layout_marginEnd="82dp"


        android:layout_marginBottom="129dp"
        android:indeterminate="true"
        android:max="100"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="323dp"
        android:layout_height="41dp"
        android:layout_marginTop="120dp"
        android:fontFamily="casual"
        android:text="@string/all_news_channel_in_one_app"
        android:textAlignment="center"
        android:textColor="#E4E4E4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.673"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>